<resources>
    <string name="app_name">Collections</string>
    <string name="facebook_app_id" translatable="false">695623054255517</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb695623054255517</string>

    <string name="shop">Shop \nthe most \nmodern \nessentials</string>
    <string name="device_language">عربي</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with">Login With</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_a_account">You have a account?</string>

    <string name="title_home">Home</string>
    <string name="trend">Trend</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="more">More</string>

    <string name="collections">Collections</string>
    <string name="my_order">My orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_information">My information</string>
    <string name="notifications">Notifications</string>
    <string name="refer_friend">Refer Friend</string>
    <string name="contact_us">Contact Us</string>
    <string name="language_country">Language Country</string>
    <string name="language_amp_country"><![CDATA[Language & Country]]></string>
    <string name="product_details">Product Details</string>
    <string name="add_to_wish">Add to wish</string>
    <string name="my_profile">My profile</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="phone_number">Phone Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="apartment">Apartment</string>
    <string name="floor">Floor</string>
    <string name="edit">Edit</string>
    <string name="message">Message</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="color">Color</string>
    <string name="status">Status</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="contact">Contact</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="checkout">Checkout</string>
    <string name="promote_code">Promote Code</string>
    <string name="pick_a_size">Pick a size</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="mobile">Mobile</string>
    <string name="all_failed_required">All fialeds required</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="new_arrival">New Arrival</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="no_items_in_your_cart">No items in your cart</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="top_offer">Top Offer</string>
    <string name="change_language">Change Language To</string>
    <string name="address_details">Address Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="skip_login">Skip Login</string>
    <string name="notice">Notice</string>
    <string name="building_number">Building Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="street_name">Street Name</string>
    <string name="address_name">Address Name</string>
    <string name="set_address_default">Set Address Default</string>
    <string name="birthday">Birthday</string>
    <string name="choose_address_hint">You have two choices to add your address shipping from text field input or map.</string>
    <string name="map">Map</string>
    <string name="text_field">Text Field</string>
    <string name="cancel">Cancel</string>

</resources>
