<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.address.AddressFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/address_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_details_label">


            <EditText
                android:id="@+id/address_name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/address_name"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>
            <EditText
                android:id="@+id/person_mobile_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/phone_number"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>
            <EditText
                android:id="@+id/country_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/country"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>
            <EditText
                android:id="@+id/city_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/city"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>
            <EditText
                android:id="@+id/building_number_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/building_number"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>


            <EditText
                android:id="@+id/floor_number_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/floor_number"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>



            <EditText
                android:id="@+id/street_name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/street_name"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/gray"/>


        </LinearLayout>



        <CheckBox
            android:id="@+id/default_address_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/set_address_default"
            app:layout_constraintTop_toBottomOf="@+id/layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"

            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/layout"
            app:layout_constraintStart_toEndOf="@+id/default_address_cb"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/save"
            android:minWidth="@dimen/_150sdp"
            app:cornerRadius="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/default_address_cb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>